@@ -5,7 +5,9 @@ PKGSRC  := $(shell basename `pwd`)
 all: prep build check clean
 
 prep:
-	R -q -e "Rcpp::compileAttributes(); devtools::document(); message('Fixing reexports.Rd'); l <- readLines(con <- file('man/reexports.Rd')); close(con); l <- sub('[BiocGenerics]{ncol}', '[BiocGenerics:nrow]{ncol}', l, fixed = TRUE); l <- sub('[BiocGenerics]{rownames}', '[BiocGenerics:row_colnames]{rownames}', l, fixed = TRUE); l <- sub('[BiocGenerics]{colnames}', '[BiocGenerics:row_colnames]{colnames}', l, fixed = TRUE); l <- sub('[BiocGenerics]{rowSums}', '[BiocGenerics:matrix-summary]{rowSums}', l, fixed = TRUE); l <- sub('[BiocGenerics]{colSums}', '[BiocGenerics:matrix-summary]{colSums}', l, fixed = TRUE); l <- sub('[BiocGenerics]{rowMeans}', '[BiocGenerics:matrix-summary]{rowMeans}', l, fixed = TRUE); l <- sub('[BiocGenerics]{colMeans}', '[BiocGenerics:matrix-summary]{colMeans}', l, fixed = TRUE); writeLines(l, 'man/reexports.Rd')"
+	R -q -e "Rcpp::compileAttributes(); devtools::document()";\
+	R -q -e "message('Fixing reexports.Rd'); l <- readLines(con <- file('man/reexports.Rd')); close(con); l <- sub('[BiocGenerics]{ncol}', '[BiocGenerics:nrow]{ncol}', l, fixed = TRUE); l <- sub('[BiocGenerics]{rownames}', '[BiocGenerics:row_colnames]{rownames}', l, fixed = TRUE); l <- sub('[BiocGenerics]{colnames}', '[BiocGenerics:row_colnames]{colnames}', l, fixed = TRUE); l <- sub('[BiocGenerics]{rowSums}', '[BiocGenerics:matrix-summary]{rowSums}', l, fixed = TRUE); l <- sub('[BiocGenerics]{colSums}', '[BiocGenerics:matrix-summary]{colSums}', l, fixed = TRUE); l <- sub('[BiocGenerics]{rowMeans}', '[BiocGenerics:matrix-summary]{rowMeans}', l, fixed = TRUE); l <- sub('[BiocGenerics]{colMeans}', '[BiocGenerics:matrix-summary]{colMeans}', l, fixed = TRUE); writeLines(l, 'man/reexports.Rd'); message('Done fixing')";\
+	R -q -e "message('Fixing utilities.Rd'); l <- readLines(con <- file('man/utilities.Rd')); close(con); l <- sub('name{get_klets}', 'name{utilities}', l, fixed = TRUE); writeLines(l, 'man/utilities.Rd'); message('Done fixing')"
 
 build:
 	cd ..;\
