@@ -20,6 +20,7 @@ export(get_bkg)
 export(get_consensus)
 export(get_consensusAA)
 export(get_klets)
+export(get_matches)
 export(icm_to_ppm)
 export(make_DBscores)
 export(merge_motifs)
@@ -51,6 +52,7 @@ export(rownames)
 export(run_meme)
 export(sample_sites)
 export(scan_sequences)
+export(score_match)
 export(shuffle_motifs)
 export(shuffle_sequences)
 export(subset)
