@@ -286,47 +286,47 @@ run_meme <- function(target.sequences, output = NULL,
 
   meme.args <- c(meme.args, "-objfun", objfun)
 
-  if (text) meme.args <- c(meme.args, "-text")
-  if (use_llr) meme.args <- c(meme.args, "-use_llr")
-  if (norand) meme.args <- c(meme.args, "-norand")
-  if (revcomp) meme.args <- c(meme.args, "-revcomp")
-  if (pal) meme.args <- c(meme.args, "-pal")
-  if (nomatrim) meme.args <- c(meme.args, "-nomatrim")
+  if (text)      meme.args <- c(meme.args, "-text")
+  if (use_llr)   meme.args <- c(meme.args, "-use_llr")
+  if (norand)    meme.args <- c(meme.args, "-norand")
+  if (revcomp)   meme.args <- c(meme.args, "-revcomp")
+  if (pal)       meme.args <- c(meme.args, "-pal")
+  if (nomatrim)  meme.args <- c(meme.args, "-nomatrim")
   if (noendgaps) meme.args <- c(meme.args, "-noendgaps")
 
-  if (!is.null(mod)) meme.args <- c(meme.args, "-mod", mod)
-  if (!is.null(minw)) meme.args <- c(meme.args, "-minw", minw)
-  if (!is.null(maxw)) meme.args <- c(meme.args, "-maxw", maxw)
-  if (!is.null(wg)) meme.args <- c(meme.args, "-wg", wg)
-  if (!is.null(ws)) meme.args <- c(meme.args, "-ws", ws)
+  if (!is.null(mod))          meme.args <- c(meme.args, "-mod", mod)
+  if (!is.null(minw))         meme.args <- c(meme.args, "-minw", minw)
+  if (!is.null(maxw))         meme.args <- c(meme.args, "-maxw", maxw)
+  if (!is.null(wg))           meme.args <- c(meme.args, "-wg", wg)
+  if (!is.null(ws))           meme.args <- c(meme.args, "-ws", ws)
   if (!is.null(markov_order)) meme.args <- c(meme.args, "-markov_order", markov_order)
-  if (!is.null(maxiter)) meme.args <- c(meme.args, "-maxiter", maxiter)
-  if (!is.null(distance)) meme.args <- c(meme.args, "-distance", distance)
-  if (!is.null(brief)) meme.args <- c(meme.args, "-brief", brief)
-  if (!is.null(shuf)) meme.args <- c(meme.args, "-shuf", shuf)
-  if (!is.null(csites)) meme.args <- c(meme.args, "-csites", csites)
-  if (!is.null(nmotifs)) meme.args <- c(meme.args, "-nmotifs", nmotifs)
-  if (!is.null(seed)) meme.args <- c(meme.args, "-seed", seed)
-  if (!is.null(test)) meme.args <- c(meme.args, "-test", test)
-  if (!is.null(hsfrac)) meme.args <- c(meme.args, "-hsfrac", hsfrac)
-  if (!is.null(cefrac)) meme.args <- c(meme.args, "-cefrac", cefrac)
-  if (!is.null(searchsize)) meme.args <- c(meme.args, "-searchsize", searchsize)
-  if (!is.null(evt)) meme.args <- c(meme.args, "-evt", evt)
-  if (!is.null(nsites)) meme.args <- c(meme.args, "-nsites", nsites)
-  if (!is.null(minsites)) meme.args <- c(meme.args, "-minsites", minsites)
-  if (!is.null(wnsites)) meme.args <- c(meme.args, "-wnsites", wnsites)
-  if (!is.null(w)) meme.args <- c(meme.args, "-w", w)
-  if (!is.null(allw)) meme.args <- c(meme.args, "-allw", allw)
-  if (!is.null(bfile)) meme.args <- c(meme.args, "-bfile", bfile)
-  if (!is.null(psp)) meme.args <- c(meme.args, "-psp", psp)
-  if (!is.null(prior)) meme.args <- c(meme.args, "-prior", prior)
-  if (!is.null(b)) meme.args <- c(meme.args, "-b", b)
-  if (!is.null(plib)) meme.args <- c(meme.args, "-plib", plib)
-  if (!is.null(spfuzz)) meme.args <- c(meme.args, "-spfuzz", spfuzz)
-  if (!is.null(spmap)) meme.args <- c(meme.args, "-spmap", spmap)
-  if (!is.null(cons)) meme.args <- c(meme.args, "-cons", cons)
-  if (!is.null(p)) meme.args <- c(meme.args, "-p", p)
-  if (!is.null(maxsize)) meme.args <- c(meme.args, "-maxsize", maxsize)
+  if (!is.null(maxiter))      meme.args <- c(meme.args, "-maxiter", maxiter)
+  if (!is.null(distance))     meme.args <- c(meme.args, "-distance", distance)
+  if (!is.null(brief))        meme.args <- c(meme.args, "-brief", brief)
+  if (!is.null(shuf))         meme.args <- c(meme.args, "-shuf", shuf)
+  if (!is.null(csites))       meme.args <- c(meme.args, "-csites", csites)
+  if (!is.null(nmotifs))      meme.args <- c(meme.args, "-nmotifs", nmotifs)
+  if (!is.null(seed))         meme.args <- c(meme.args, "-seed", seed)
+  if (!is.null(test))         meme.args <- c(meme.args, "-test", test)
+  if (!is.null(hsfrac))       meme.args <- c(meme.args, "-hsfrac", hsfrac)
+  if (!is.null(cefrac))       meme.args <- c(meme.args, "-cefrac", cefrac)
+  if (!is.null(searchsize))   meme.args <- c(meme.args, "-searchsize", searchsize)
+  if (!is.null(evt))          meme.args <- c(meme.args, "-evt", evt)
+  if (!is.null(nsites))       meme.args <- c(meme.args, "-nsites", nsites)
+  if (!is.null(minsites))     meme.args <- c(meme.args, "-minsites", minsites)
+  if (!is.null(wnsites))      meme.args <- c(meme.args, "-wnsites", wnsites)
+  if (!is.null(w))            meme.args <- c(meme.args, "-w", w)
+  if (!is.null(allw))         meme.args <- c(meme.args, "-allw", allw)
+  if (!is.null(bfile))        meme.args <- c(meme.args, "-bfile", bfile)
+  if (!is.null(psp))          meme.args <- c(meme.args, "-psp", psp)
+  if (!is.null(prior))        meme.args <- c(meme.args, "-prior", prior)
+  if (!is.null(b))            meme.args <- c(meme.args, "-b", b)
+  if (!is.null(plib))         meme.args <- c(meme.args, "-plib", plib)
+  if (!is.null(spfuzz))       meme.args <- c(meme.args, "-spfuzz", spfuzz)
+  if (!is.null(spmap))        meme.args <- c(meme.args, "-spmap", spmap)
+  if (!is.null(cons))         meme.args <- c(meme.args, "-cons", cons)
+  if (!is.null(p))            meme.args <- c(meme.args, "-p", p)
+  if (!is.null(maxsize))      meme.args <- c(meme.args, "-maxsize", maxsize)
 
   if (v>0) cat(paste0("\n *** Starting MEME ***\n\n", pdate(), "\n"))
 
