@@ -1,10 +1,12 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/RcppExports.R, R/compare_motifs.R, R/utils.R
-\name{get_klets}
+\name{utilities}
 \alias{get_klets}
 \alias{make_DBscores}
 \alias{utilities}
 \alias{motif_score}
+\alias{score_match}
+\alias{get_matches}
 \alias{ppm_to_icm}
 \alias{icm_to_ppm}
 \alias{pcm_to_ppm}
@@ -27,6 +29,10 @@ make_DBscores(db.motifs, method, shuffle.db = TRUE, shuffle.k = 3,
   min.mean.ic = 0, progress = TRUE, BP = FALSE)
 
 motif_score(motif, threshold = c(0, 1))
+
+score_match(motif, match)
+
+get_matches(motif, score)
 
 ppm_to_icm(position, bkg, schneider_correction = FALSE, nsites,
   relative_entropy = FALSE)
@@ -93,6 +99,10 @@ P-value computation.}
 
 \item{threshold}{\code{numeric(1)} Any number of numeric values between 0 and 1
 representing score percentage.}
+
+\item{match}{\code{character(1)} Sequence string to calculate score from.}
+
+\item{score}{\code{numeric(1)} Logodds motif score.}
 
 \item{position}{\code{numeric} A numeric vector representing the frequency or
 probability for each alphabet letter at a specific position.}
@@ -230,8 +240,18 @@ get_klets(c("A", "C", "G", "T"), 3)
 
 ## motif_score
 ## Calculate motif score from different thresholds
-m <- create_motif()
+data(examplemotif)
+m <- normalize(examplemotif)
 motif_score(m, c(0, 0.8, 1))
+
+## score_match
+## Calculate score of a particular match
+score_match(m, "TATATAT")
+score_match(m, "TATATAG")
+
+## get_match
+## Get all possible motif matches above input score
+get_matches(m, 10)
 
 }
 \seealso{
